# eMo

./: .gitignore  Cargo.toml  README.md  UNIQUE_VALUE_PROPOSITION.txt  blueprint.shw  eMo_UNIFIED_MANUAL.md  generate_lessons.py  generate_syntax_lessons.py  install_all.sh  main.hpy  std_math.shw  test.emo  test_data.emo  test_dimensions.emo  test_error.emo  test_libraries.emo  test_math.h  test_new.emo  test_shadow.emo  test_standalone.emo  test_type_error.emo
emo/: Cargo.toml
emo/src/: main.rs
emo_compiler/: Cargo.toml
emo_compiler/src/: ast.rs  codegen_c.rs  emo_runtime.h  formatter.rs  interpreter.rs  interpreter.rs_end.txt  lexer.rs  lib.rs  main.rs  parser.rs  shadow_synthesizer.rs  type_checker.rs
happycry/: .gitignore  Cargo.toml  DOCS_HAPPYCRY.md  DOCS_VIRUS.md  README_INSTALL.md  SYSTEM_OVERVIEW.md  happycry.sh  install.ps1  install.sh  release.sh  test_english.hpy  web.hpy  writer.py
happycry/src/: ast.rs  builder.rs  codegen.rs  codegen_fixed.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs
projects/eMo_Nexus/: README.md  main.emo  run_nexus.sh  run_test.sh
projects/eMo_Nexus/src/: adapter.shw  brain.tvrus  interface.hpy  kernel.ss
sadsmile/: Cargo.toml  SADSMILE_MANUAL.txt  install.sh  master_test.ss  test_brace.rs
sadsmile/src/: config.rs  executor.rs  interface.rs  lexer.rs  lib.rs  main.rs  memory.rs  parser.rs  safe_io.rs  shell_helper.rs  tvrus_client.rs  types.rs
