[package]
name = "emo_compiler"
version = "4.0.0"
edition = "2021"

[dependencies]
logos = "0.13"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
libloading = "0.8"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }